header title made responsive

--- a/dominicshaw.net/index.html
+++ b/dominicshaw.net/index.html
@@ -25,7 +25,7 @@
                 <div class="Center">
                     <div class="site-logo">
                         <h1>
-                            <a href="#"><span>dominicshaw</span>.net</a>
+                            <a href="#"><span id="headertextbig">dominicshaw</span><span id="headertextsml">d-shaw</span>.net</a>
                         </h1>
                     </div>
                     <div id="mobile_sec">
