--- a/dominicshaw.net/index.html
+++ b/dominicshaw.net/index.html
@@ -94,7 +94,7 @@
                                                 </ul>
                                             </div>
                                             <div class="Lorem">
-                                                <p>lorem quis bibendum <span>Necagittis Nibel</span></p>
+                                                <p>stock photos! <span>Necagittis Nibel</span></p>
                                             </div>
                                         </div>
                                     </div>
@@ -110,7 +110,7 @@
                                                 </ul>
                                             </div>
                                             <div class="Lorem">
-                                                <p>lorem quis bibendum<span>Necagittis Nibel</span></p>
+                                                <p>stock photos! <span>Necagittis Nibel</span></p>
                                             </div>
                                         </div>
                                     </div>
