Quick update to images at top of page

--- a/dominicshaw.net/index.html
+++ b/dominicshaw.net/index.html
@@ -88,13 +88,15 @@
                                         <figure><img src="img/Slider-img1.jpg" alt="image"></figure>
                                         <div class="text">
                                             <div class="Icon">
-                                                <ul>
-                                                    <li><a href="#"><i class="fa fa-heart"></i>700</a></li>
-                                                    <li><a href="#"><i class="fa fa-commenting"></i>150</a></li>
-                                                </ul>
+                                                <!--
+                                                    <ul>
+                                                        <li><a href="#"><i class="fa fa-heart"></i>700</a></li>
+                                                        <li><a href="#"><i class="fa fa-commenting"></i>150</a></li>
+                                                    </ul>
+                                                -->
                                             </div>
                                             <div class="Lorem">
-                                                <p>stock photos! <span>Necagittis Nibel</span></p>
+                                                <p>Iztaccihuatl <span>Dominic Shaw</span></p>
                                             </div>
                                         </div>
                                     </div>
@@ -104,13 +106,15 @@
                                         <figure><img src="img/Slider-img2.jpg" alt="image"></figure>
                                         <div class="text">
                                             <div class="Icon">
+                                                <!--
                                                 <ul>
                                                     <li><a href="#"><i class="fa fa-heart"></i>700</a></li>
-                                                    <li class="num"><a href="#"><i class="fa fa-commenting"></i>150</a></li>
+                                                    <li><a href="#"><i class="fa fa-commenting"></i>150</a></li>
                                                 </ul>
+                                                -->
                                             </div>
                                             <div class="Lorem">
-                                                <p>stock photos! <span>Necagittis Nibel</span></p>
+                                                <p>Hikkaduwa<span>Dominic Shaw</span></p>
                                             </div>
                                         </div>
                                     </div>
