--- a/dominicshaw.net/index.html
+++ b/dominicshaw.net/index.html
@@ -88,15 +88,12 @@
                                         <figure><img src="img/Slider-img1.jpg" alt="image"></figure>
                                         <div class="text">
                                             <div class="Icon">
-                                                <!--
-                                                    <ul>
-                                                        <li><a href="#"><i class="fa fa-heart"></i>700</a></li>
-                                                        <li><a href="#"><i class="fa fa-commenting"></i>150</a></li>
-                                                    </ul>
-                                                -->
+                                                <ul>
+                                                    <li><a href="#"><i class="fa fa-globe"></i>August 2017</a></li>
+                                                </ul>
                                             </div>
                                             <div class="Lorem">
-                                                <p>Iztaccihuatl <span>Dominic Shaw</span></p>
+                                                <p>Iztaccihuatl, Mexico<span>Dominic Shaw</span></p>
                                             </div>
                                         </div>
                                     </div>
@@ -106,15 +103,147 @@
                                         <figure><img src="img/Slider-img2.jpg" alt="image"></figure>
                                         <div class="text">
                                             <div class="Icon">
-                                                <!--
                                                 <ul>
-                                                    <li><a href="#"><i class="fa fa-heart"></i>700</a></li>
-                                                    <li><a href="#"><i class="fa fa-commenting"></i>150</a></li>
+                                                    <li><a href="#"><i class="fa fa-globe"></i>November 2009</a></li>
                                                 </ul>
-                                                -->
                                             </div>
                                             <div class="Lorem">
-                                                <p>Hikkaduwa<span>Dominic Shaw</span></p>
+                                                <p>Hikkaduwa, Sri Lanka<span>Dominic Shaw</span></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="Slider">
+                                        <figure><img src="img/Slider-img3.jpg" alt="image"></figure>
+                                        <div class="text">
+                                            <div class="Icon">
+                                                <ul>
+                                                    <li><a href="#"><i class="fa fa-globe"></i>February 2014</a></li>
+                                                </ul>
+                                            </div>
+                                            <div class="Lorem">
+                                                <p>Cape Town, South Africa<span>Dominic Shaw</span></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="Slider">
+                                        <figure><img src="img/Slider-img4.jpg" alt="image"></figure>
+                                        <div class="text">
+                                            <div class="Icon">
+                                                <ul>
+                                                    <li><a href="#"><i class="fa fa-globe"></i>March 2010</a></li>
+                                                </ul>
+                                            </div>
+                                            <div class="Lorem">
+                                                <p>Ha Long Bay, Vietnam<span>Dominic Shaw</span></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="Slider">
+                                        <figure><img src="img/Slider-img5.jpg" alt="image"></figure>
+                                        <div class="text">
+                                            <div class="Icon">
+                                                <ul>
+                                                    <li><a href="#"><i class="fa fa-globe"></i>February 2014</a></li>
+                                                </ul>
+                                            </div>
+                                            <div class="Lorem">
+                                                <p>Cape Town, South Africa<span>Dominic Shaw</span></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="Slider">
+                                        <figure><img src="img/Slider-img6.jpg" alt="image"></figure>
+                                        <div class="text">
+                                            <div class="Icon">
+                                                <ul>
+                                                    <li><a href="#"><i class="fa fa-globe"></i>July 2017</a></li>
+                                                </ul>
+                                            </div>
+                                            <div class="Lorem">
+                                                <p>Nevado Toluca, Mexico<span>Dominic Shaw</span></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="Slider">
+                                        <figure><img src="img/Slider-img7.jpg" alt="image"></figure>
+                                        <div class="text">
+                                            <div class="Icon">
+                                                <ul>
+                                                    <li><a href="#"><i class="fa fa-globe"></i>July 2017</a></li>
+                                                </ul>
+                                            </div>
+                                            <div class="Lorem">
+                                                <p>Popocatepetl, Mexico<span>Dominic Shaw</span></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="Slider">
+                                        <figure><img src="img/Slider-img8.jpg" alt="image"></figure>
+                                        <div class="text">
+                                            <div class="Icon">
+                                                <ul>
+                                                    <li><a href="#"><i class="fa fa-globe"></i>February 2014</a></li>
+                                                </ul>
+                                            </div>
+                                            <div class="Lorem">
+                                                <p>Cape Town, South Africa<span>Dominic Shaw</span></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="Slider">
+                                        <figure><img src="img/Slider-img9.jpg" alt="image"></figure>
+                                        <div class="text">
+                                            <div class="Icon">
+                                                <ul>
+                                                    <li><a href="#"><i class="fa fa-globe"></i>September 2009</a></li>
+                                                </ul>
+                                            </div>
+                                            <div class="Lorem">
+                                                <p>Leh, India<span>Dominic Shaw</span></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="Slider">
+                                        <figure><img src="img/Slider-img10.jpg" alt="image"></figure>
+                                        <div class="text">
+                                            <div class="Icon">
+                                                <ul>
+                                                    <li><a href="#"><i class="fa fa-globe"></i>July 2010</a></li>
+                                                </ul>
+                                            </div>
+                                            <div class="Lorem">
+                                                <p>Leh, India<span>Dominic Shaw</span></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="Slider">
+                                        <figure><img src="img/Slider-img11.jpg" alt="image"></figure>
+                                        <div class="text">
+                                            <div class="Icon">
+                                                <ul>
+                                                    <li><a href="#"><i class="fa fa-globe"></i>July 2017</a></li>
+                                                </ul>
+                                            </div>
+                                            <div class="Lorem">
+                                                <p>Popocatepetl, Mexico<span>Dominic Shaw</span></p>
                                             </div>
                                         </div>
                                     </div>
