--- a/dominicshaw.net/index.html
+++ b/dominicshaw.net/index.html
@@ -248,6 +248,21 @@
                                         </div>
                                     </div>
                                 </li>
+                                <li>
+                                    <div class="Slider">
+                                        <figure><img src="img/Slider-img12.jpg" alt="image"></figure>
+                                        <div class="text">
+                                            <div class="Icon">
+                                                <ul>
+                                                    <li><a href="#"><i class="fa fa-globe"></i>June 2010</a></li>
+                                                </ul>
+                                            </div>
+                                            <div class="Lorem">
+                                                <p>Bali, Indonesia<span>Dominic Shaw</span></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
                             </ul>
                             <figure><img src="img/Shadow-img.png" alt="image" class="Shadow"></figure>
                         </div>
