Styling on photo banner & removed images from "Now" section

--- a/dominicshaw.net/index.html
+++ b/dominicshaw.net/index.html
@@ -89,11 +89,13 @@
                                         <div class="text">
                                             <div class="Icon">
                                                 <ul>
-                                                    <li><a href="#"><i class="fa fa-globe"></i>August 2017</a></li>
+                                                    <li><a href="#"><i class="fa fa-calendar"></i>August 2017</a></li>
                                                 </ul>
                                             </div>
                                             <div class="Lorem">
-                                                <p>Iztaccihuatl, Mexico<span>Dominic Shaw</span></p>
+                                                <p>
+                                                    Iztaccihuatl<span>Mexico</span>
+                                                </p>
                                             </div>
                                         </div>
                                     </div>
@@ -104,11 +106,11 @@
                                         <div class="text">
                                             <div class="Icon">
                                                 <ul>
-                                                    <li><a href="#"><i class="fa fa-globe"></i>November 2009</a></li>
+                                                    <li><a href="#"><i class="fa fa-calendar"></i>November 2009</a></li>
                                                 </ul>
                                             </div>
                                             <div class="Lorem">
-                                                <p>Hikkaduwa, Sri Lanka<span>Dominic Shaw</span></p>
+                                                <p>Hikkaduwa<span>Sri Lanka</span></p>
                                             </div>
                                         </div>
                                     </div>
@@ -119,11 +121,11 @@
                                         <div class="text">
                                             <div class="Icon">
                                                 <ul>
-                                                    <li><a href="#"><i class="fa fa-globe"></i>February 2014</a></li>
+                                                    <li><a href="#"><i class="fa fa-calendar"></i>February 2014</a></li>
                                                 </ul>
                                             </div>
                                             <div class="Lorem">
-                                                <p>Cape Town, South Africa<span>Dominic Shaw</span></p>
+                                                <p>Cape Town<span>South Africa</span></p>
                                             </div>
                                         </div>
                                     </div>
@@ -134,11 +136,11 @@
                                         <div class="text">
                                             <div class="Icon">
                                                 <ul>
-                                                    <li><a href="#"><i class="fa fa-globe"></i>March 2010</a></li>
+                                                    <li><a href="#"><i class="fa fa-calendar"></i>March 2010</a></li>
                                                 </ul>
                                             </div>
                                             <div class="Lorem">
-                                                <p>Ha Long Bay, Vietnam<span>Dominic Shaw</span></p>
+                                                <p>Ha Long Bay<span>Vietnam</span></p>
                                             </div>
                                         </div>
                                     </div>
@@ -149,11 +151,11 @@
                                         <div class="text">
                                             <div class="Icon">
                                                 <ul>
-                                                    <li><a href="#"><i class="fa fa-globe"></i>February 2014</a></li>
+                                                    <li><a href="#"><i class="fa fa-calendar"></i>February 2014</a></li>
                                                 </ul>
                                             </div>
                                             <div class="Lorem">
-                                                <p>Cape Town, South Africa<span>Dominic Shaw</span></p>
+                                                <p>Cape Town<span>South Africa</span></p>
                                             </div>
                                         </div>
                                     </div>
@@ -164,11 +166,11 @@
                                         <div class="text">
                                             <div class="Icon">
                                                 <ul>
-                                                    <li><a href="#"><i class="fa fa-globe"></i>July 2017</a></li>
+                                                    <li><a href="#"><i class="fa fa-calendar"></i>July 2017</a></li>
                                                 </ul>
                                             </div>
                                             <div class="Lorem">
-                                                <p>Nevado Toluca, Mexico<span>Dominic Shaw</span></p>
+                                                <p>Nevado Toluca<span>Mexico</span></p>
                                             </div>
                                         </div>
                                     </div>
@@ -179,11 +181,11 @@
                                         <div class="text">
                                             <div class="Icon">
                                                 <ul>
-                                                    <li><a href="#"><i class="fa fa-globe"></i>July 2017</a></li>
+                                                    <li><a href="#"><i class="fa fa-calendar"></i>July 2017</a></li>
                                                 </ul>
                                             </div>
                                             <div class="Lorem">
-                                                <p>Popocatepetl, Mexico<span>Dominic Shaw</span></p>
+                                                <p>Popocatepetl<span>Mexico</span></p>
                                             </div>
                                         </div>
                                     </div>
@@ -194,11 +196,11 @@
                                         <div class="text">
                                             <div class="Icon">
                                                 <ul>
-                                                    <li><a href="#"><i class="fa fa-globe"></i>February 2014</a></li>
+                                                    <li><a href="#"><i class="fa fa-calendar"></i>February 2014</a></li>
                                                 </ul>
                                             </div>
                                             <div class="Lorem">
-                                                <p>Cape Town, South Africa<span>Dominic Shaw</span></p>
+                                                <p>Cape Town<span>South Africa</span></p>
                                             </div>
                                         </div>
                                     </div>
@@ -209,11 +211,11 @@
                                         <div class="text">
                                             <div class="Icon">
                                                 <ul>
-                                                    <li><a href="#"><i class="fa fa-globe"></i>September 2009</a></li>
+                                                    <li><a href="#"><i class="fa fa-calendar"></i>September 2009</a></li>
                                                 </ul>
                                             </div>
                                             <div class="Lorem">
-                                                <p>Leh, India<span>Dominic Shaw</span></p>
+                                                <p>Leh<span>India</span></p>
                                             </div>
                                         </div>
                                     </div>
@@ -224,11 +226,11 @@
                                         <div class="text">
                                             <div class="Icon">
                                                 <ul>
-                                                    <li><a href="#"><i class="fa fa-globe"></i>July 2010</a></li>
+                                                    <li><a href="#"><i class="fa fa-calendar"></i>July 2010</a></li>
                                                 </ul>
                                             </div>
                                             <div class="Lorem">
-                                                <p>Leh, India<span>Dominic Shaw</span></p>
+                                                <p>Yangshuo<span>China</span></p>
                                             </div>
                                         </div>
                                     </div>
@@ -239,11 +241,11 @@
                                         <div class="text">
                                             <div class="Icon">
                                                 <ul>
-                                                    <li><a href="#"><i class="fa fa-globe"></i>July 2017</a></li>
+                                                    <li><a href="#"><i class="fa fa-calendar"></i>July 2017</a></li>
                                                 </ul>
                                             </div>
                                             <div class="Lorem">
-                                                <p>Popocatepetl, Mexico<span>Dominic Shaw</span></p>
+                                                <p>Popocatepetl<span>Mexico</span></p>
                                             </div>
                                         </div>
                                     </div>
@@ -254,11 +256,11 @@
                                         <div class="text">
                                             <div class="Icon">
                                                 <ul>
-                                                    <li><a href="#"><i class="fa fa-globe"></i>June 2010</a></li>
+                                                    <li><a href="#"><i class="fa fa-calendar"></i>June 2010</a></li>
                                                 </ul>
                                             </div>
                                             <div class="Lorem">
-                                                <p>Bali, Indonesia<span>Dominic Shaw</span></p>
+                                                <p>Bali<span>Indonesia</span></p>
                                             </div>
                                         </div>
                                     </div>
@@ -314,14 +316,14 @@
                             <div class="clear"></div>
 
                             <div class="tabcontent" id="cont-1-1">
-                                <div class="TabImage">
+                                <!--<div class="TabImage">
                                     <div class="img1">
                                         <figure><img src="img/about-img2.jpg" alt="image"></figure>
                                     </div>
                                     <div class="img2">
                                         <figure><img src="img/about-img1.jpg" alt="image"></figure>
                                     </div>
-                                </div>
+                                </div>-->
                                 <div class="Description">
                                     <h3>C# &amp; OOP<span>around 10 years of experience</span></h3>
                                     <p>
@@ -339,7 +341,8 @@
                             </div>
 
                             <div class="tabcontent hide" id="cont-2-1">
-                                <div class="TabImage">
+                                <!--
+                                    <div class="TabImage">
                                     <div class="img1">
                                         <figure><img src="img/about-img2.jpg" alt="image"></figure>
                                     </div>
@@ -347,6 +350,7 @@
                                         <figure><img src="img/about-img1.jpg" alt="image"></figure>
                                     </div>
                                 </div>
+                                    -->
                                 <div class="Description">
                                     <h3>WPF &amp; MVVM<span>around 6 years of experience</span></h3>
                                     <p>
@@ -365,14 +369,14 @@
                             </div>
 
                             <div class="tabcontent hide" id="cont-3-1">
-                                <div class="TabImage">
+                                <!--<div class="TabImage">
                                     <div class="img1">
                                         <figure><img src="img/about-img1.jpg" alt="image"></figure>
                                     </div>
                                     <div class="img2">
                                         <figure><img src="img/about-img2.jpg" alt="image"></figure>
                                     </div>
-                                </div>
+                                </div>-->
                                 <div class="Description">
                                     <h3>WCF<span>around 5 years of experience</span></h3>
                                     <p>
@@ -386,14 +390,14 @@
                             </div>
 
                             <div class="tabcontent hide" id="cont-4-1">
-                                <div class="TabImage">
+                                <!--<div class="TabImage">
                                     <div class="img1">
                                         <figure><img src="img/about-img2.jpg" alt="image"></figure>
                                     </div>
                                     <div class="img2">
                                         <figure><img src="img/about-img1.jpg" alt="image"></figure>
                                     </div>
-                                </div>
+                                </div>-->
                                 <div class="Description">
                                     <h3>ASP.NET &amp; MVC<span>around 5 years of experience</span></h3>
                                     <p>
@@ -414,14 +418,14 @@
                             </div>
 
                             <div class="tabcontent hide" id="cont-5-1">
-                                <div class="TabImage">
+                                <!--<div class="TabImage">
                                     <div class="img1">
                                         <figure><img src="img/about-img2.jpg" alt="image"></figure>
                                     </div>
                                     <div class="img2">
                                         <figure><img src="img/about-img1.jpg" alt="image"></figure>
                                     </div>
-                                </div>
+                                </div>-->
                                 <div class="Description">
                                     <h3>T-SQL &amp; PL SQL<span>around 11 years of experience</span></h3>
                                     <p>
