Reorganised images into their own folder; changed opacity

--- a/dominicshaw.net/index.html
+++ b/dominicshaw.net/index.html
@@ -85,7 +85,7 @@
                             <ul id="slider">
                                 <li>
                                     <div class="Slider">
-                                        <figure><img src="img/Slider-img1.jpg" alt="image"></figure>
+                                        <figure><img src="img/front/Izta.jpg" alt="image"></figure>
                                         <div class="text">
                                             <div class="Icon">
                                                 <ul>
@@ -102,7 +102,37 @@
                                 </li>
                                 <li>
                                     <div class="Slider">
-                                        <figure><img src="img/Slider-img2.jpg" alt="image"></figure>
+                                        <figure><img src="img/front/Wedding.jpg" alt="image"></figure>
+                                        <div class="text">
+                                            <div class="Icon">
+                                                <ul>
+                                                    <li><a href="#"><i class="fa fa-calendar"></i>July 2016</a></li>
+                                                </ul>
+                                            </div>
+                                            <div class="Lorem">
+                                                <p>Wedding Day<span>Wales</span></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="Slider">
+                                        <figure><img src="img/front/Lijang.jpg" alt="image"></figure>
+                                        <div class="text">
+                                            <div class="Icon">
+                                                <ul>
+                                                    <li><a href="#"><i class="fa fa-calendar"></i>July 2010</a></li>
+                                                </ul>
+                                            </div>
+                                            <div class="Lorem">
+                                                <p>Lijang<span>China</span></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="Slider">
+                                        <figure><img src="img/front/Hika.jpg" alt="image"></figure>
                                         <div class="text">
                                             <div class="Icon">
                                                 <ul>
@@ -117,7 +147,22 @@
                                 </li>
                                 <li>
                                     <div class="Slider">
-                                        <figure><img src="img/Slider-img3.jpg" alt="image"></figure>
+                                        <figure><img src="img/front/Bayon.jpg" alt="image"></figure>
+                                        <div class="text">
+                                            <div class="Icon">
+                                                <ul>
+                                                    <li><a href="#"><i class="fa fa-calendar"></i>February 2010</a></li>
+                                                </ul>
+                                            </div>
+                                            <div class="Lorem">
+                                                <p>Bayon<span>Cambodia</span></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="Slider">
+                                        <figure><img src="img/front/CT1.jpg" alt="image"></figure>
                                         <div class="text">
                                             <div class="Icon">
                                                 <ul>
@@ -132,7 +177,7 @@
                                 </li>
                                 <li>
                                     <div class="Slider">
-                                        <figure><img src="img/Slider-img4.jpg" alt="image"></figure>
+                                        <figure><img src="img/front/Halong.jpg" alt="image"></figure>
                                         <div class="text">
                                             <div class="Icon">
                                                 <ul>
@@ -147,7 +192,22 @@
                                 </li>
                                 <li>
                                     <div class="Slider">
-                                        <figure><img src="img/Slider-img5.jpg" alt="image"></figure>
+                                        <figure><img src="img/front/Tiger.jpg" alt="image"></figure>
+                                        <div class="text">
+                                            <div class="Icon">
+                                                <ul>
+                                                    <li><a href="#"><i class="fa fa-calendar"></i>July 2010</a></li>
+                                                </ul>
+                                            </div>
+                                            <div class="Lorem">
+                                                <p>Tiger Leaping Gorge<span>China</span></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="Slider">
+                                        <figure><img src="img/front/CT2.jpg" alt="image"></figure>
                                         <div class="text">
                                             <div class="Icon">
                                                 <ul>
@@ -162,7 +222,7 @@
                                 </li>
                                 <li>
                                     <div class="Slider">
-                                        <figure><img src="img/Slider-img6.jpg" alt="image"></figure>
+                                        <figure><img src="img/front/Nevado.jpg" alt="image"></figure>
                                         <div class="text">
                                             <div class="Icon">
                                                 <ul>
@@ -177,22 +237,7 @@
                                 </li>
                                 <li>
                                     <div class="Slider">
-                                        <figure><img src="img/Slider-img7.jpg" alt="image"></figure>
-                                        <div class="text">
-                                            <div class="Icon">
-                                                <ul>
-                                                    <li><a href="#"><i class="fa fa-calendar"></i>July 2017</a></li>
-                                                </ul>
-                                            </div>
-                                            <div class="Lorem">
-                                                <p>Popocatepetl<span>Mexico</span></p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="Slider">
-                                        <figure><img src="img/Slider-img8.jpg" alt="image"></figure>
+                                        <figure><img src="img/front/CT3.jpg" alt="image"></figure>
                                         <div class="text">
                                             <div class="Icon">
                                                 <ul>
@@ -207,7 +252,7 @@
                                 </li>
                                 <li>
                                     <div class="Slider">
-                                        <figure><img src="img/Slider-img9.jpg" alt="image"></figure>
+                                        <figure><img src="img/front/Leh.jpg" alt="image"></figure>
                                         <div class="text">
                                             <div class="Icon">
                                                 <ul>
@@ -222,7 +267,7 @@
                                 </li>
                                 <li>
                                     <div class="Slider">
-                                        <figure><img src="img/Slider-img10.jpg" alt="image"></figure>
+                                        <figure><img src="img/front/Yangshao.jpg" alt="image"></figure>
                                         <div class="text">
                                             <div class="Icon">
                                                 <ul>
@@ -237,7 +282,7 @@
                                 </li>
                                 <li>
                                     <div class="Slider">
-                                        <figure><img src="img/Slider-img11.jpg" alt="image"></figure>
+                                        <figure><img src="img/front/Popo2.jpg" alt="image"></figure>
                                         <div class="text">
                                             <div class="Icon">
                                                 <ul>
@@ -252,7 +297,7 @@
                                 </li>
                                 <li>
                                     <div class="Slider">
-                                        <figure><img src="img/Slider-img12.jpg" alt="image"></figure>
+                                        <figure><img src="img/front/Ubud.jpg" alt="image"></figure>
                                         <div class="text">
                                             <div class="Icon">
                                                 <ul>
@@ -261,6 +306,96 @@
                                             </div>
                                             <div class="Lorem">
                                                 <p>Bali<span>Indonesia</span></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="Slider">
+                                        <figure><img src="img/front/Ankor-Wat.jpg" alt="image"></figure>
+                                        <div class="text">
+                                            <div class="Icon">
+                                                <ul>
+                                                    <li><a href="#"><i class="fa fa-calendar"></i>February 2010</a></li>
+                                                </ul>
+                                            </div>
+                                            <div class="Lorem">
+                                                <p>Angkor Wat<span>Cambodia</span></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="Slider">
+                                        <figure><img src="img/front/Popo1.jpg" alt="image"></figure>
+                                        <div class="text">
+                                            <div class="Icon">
+                                                <ul>
+                                                    <li><a href="#"><i class="fa fa-calendar"></i>July 2017</a></li>
+                                                </ul>
+                                            </div>
+                                            <div class="Lorem">
+                                                <p>Popocatepetl<span>Mexico</span></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="Slider">
+                                        <figure><img src="img/front/Goa.jpg" alt="image"></figure>
+                                        <div class="text">
+                                            <div class="Icon">
+                                                <ul>
+                                                    <li><a href="#"><i class="fa fa-calendar"></i>October 2009</a></li>
+                                                </ul>
+                                            </div>
+                                            <div class="Lorem">
+                                                <p>Goa<span>India</span></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="Slider">
+                                        <figure><img src="img/front/Kunming.jpg" alt="image"></figure>
+                                        <div class="text">
+                                            <div class="Icon">
+                                                <ul>
+                                                    <li><a href="#"><i class="fa fa-calendar"></i>July 2010</a></li>
+                                                </ul>
+                                            </div>
+                                            <div class="Lorem">
+                                                <p>Kunming<span>China</span></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="Slider">
+                                        <figure><img src="img/front/Vientiane.jpg" alt="image"></figure>
+                                        <div class="text">
+                                            <div class="Icon">
+                                                <ul>
+                                                    <li><a href="#"><i class="fa fa-calendar"></i>February 2010</a></li>
+                                                </ul>
+                                            </div>
+                                            <div class="Lorem">
+                                                <p>Vientiane<span>Laos</span></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="Slider">
+                                        <figure><img src="img/front/Wall.jpg" alt="image"></figure>
+                                        <div class="text">
+                                            <div class="Icon">
+                                                <ul>
+                                                    <li><a href="#"><i class="fa fa-calendar"></i>July 2010</a></li>
+                                                </ul>
+                                            </div>
+                                            <div class="Lorem">
+                                                <p>Great Wall<span>China</span></p>
                                             </div>
                                         </div>
                                     </div>
@@ -534,7 +669,7 @@
                             <ul id="photoSlider">
                                 <li>
                                     <div class="Slider">
-                                        <figure><img src="img/Slider-img1.jpg" alt="image"></figure>
+                                        <figure><img src="img/front/Aaaaaa1.jpg" alt="image"></figure>
                                         <div class="text">
                                             <div class="Lorem">
                                                 <p>lorem quis bibendum <span>Necagittis Nibel</span></p>
@@ -544,7 +679,7 @@
                                 </li>
                                 <li>
                                     <div class="Slider">
-                                        <figure><img src="img/Slider-img2.jpg" alt="image"></figure>
+                                        <figure><img src="img/front/Aaaaaa2.jpg" alt="image"></figure>
                                         <div class="text">
                                             <div class="Lorem">
                                                 <p>lorem quis bibendum<span>Necagittis Nibel</span></p>
